--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 		<meta charset="UTF-8" />
 		<!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
+		<title>The Fridge App</title>
 		<!-- use tailwind stylesheet at src/index.css -->
 		<link rel="stylesheet" href="/src/index.css" />
 	</head>
 	<body>
 		<div id="app"></div>
+		<script>
+			if ("serviceWorker" in navigator) {
+				navigator.serviceWorker.register("/serviceWorker.js");
+			}
+		</script>
 		<script type="module" src="/main.js"></script>
 	</body>
 </html>
